Fix footer layout on mobile

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -83,3 +83,11 @@
         }
     }
 }
+
+@media (max-width: 874px) {
+    .footer {
+      &__content {
+        flex-direction: column;
+      }
+    }
+  }
